--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,51 @@
-﻿node_modules/
+# =========================
+# Node
+# =========================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Env files (IMPORTANT)
 .env
+.env.local
+.env.*.local
+
+# Build output
+dist/
+build/
+.vercel/
+
+# OS / Editor
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+
+# Coverage / cache
+coverage/
+.nyc_output/
+.cache/
+
+# Images/temp uploads
+uploads/
+tmp/
+*.tmp
+
+# Mongo local dump
+dump/
+
+# Misc
+*.bak
+*.swp
