--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
         {
             "src": "*.js",
             "use": "@vercel/static"
+        },
+        {
+            "src": "img/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
